Nav link updates

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <!-- Page Navigation Links -->
             <nav class="mb-3">
                 <a href="./index.html" class="text-white me-3">Home</a>
-                <a href="/navigation/problem.html" class="text-white me-3">Problem</a>
-                <a href="/navigation/solution.html" class="text-white me-3">Solution</a>
-                <a href="/navigation/benefits.html" class="text-white me-3">Benefits</a>
-                <a href="/navigation/resources.html" class="text-white">Resources</a>
+                <a href="./navigation/problem.html" class="text-white me-3">Problem</a>
+                <a href="./navigation/solution.html" class="text-white me-3">Solution</a>
+                <a href="./navigation/benefits.html" class="text-white me-3">Benefits</a>
+                <a href="./navigation/resources.html" class="text-white">Resources</a>
             </nav>
 
             <!-- Social Media Links -->
