--- a/navigation/resources.html
+++ b/navigation/resources.html
@@ -73,29 +73,29 @@
         </section>
     </main>
 
-    <!-- Footer Section -->
-    <footer class="py-3 bg-dark text-white">
-        <div class="container text-center">
-            <!-- Page Navigation Links -->
-            <nav class="mb-3">
-                <a href="../index.html" class="text-white me-3">Home</a>
-                <a href="/navigation/problem.html" class="text-white me-3">Problem</a>
-                <a href="/navigation/solution.html" class="text-white me-3">Solution</a>
-                <a href="/navigation/benefits.html" class="text-white me-3">Benefits</a>
-                <a href="/navigation/resources.html" class="text-white">Resources</a>
-            </nav>
+<!-- Footer Section -->
+<footer class="py-3 bg-dark text-white">
+    <div class="container text-center">
+        <!-- Page Navigation Links -->
+        <nav class="mb-3">
+            <a href="../index.html" class="text-white me-3">Home</a>
+            <a href="problem.html" class="text-white me-3">Problem</a>
+            <a href="solution.html" class="text-white me-3">Solution</a>
+            <a href="benefits.html" class="text-white me-3">Benefits</a>
+            <a href="resources.html" class="text-white">Resources</a>
+        </nav>
 
-            <!-- Social Media Links -->
-            <div class="mb-3">
-                <a href="#" class="text-white me-3">Twitter</a>
-                <a href="#" class="text-white me-3">LinkedIn</a>
-                <a href="#" class="text-white">Facebook</a>
-            </div>
-
-            <!-- Copyright -->
-            <p class="mb-0">&copy; 2025 Michael Reyes-Casanova. All rights reserved.</p>
+        <!-- Social Media Links -->
+        <div class="mb-3">
+            <a href="#" class="text-white me-3">Twitter</a>
+            <a href="#" class="text-white me-3">LinkedIn</a>
+            <a href="#" class="text-white">Facebook</a>
         </div>
-    </footer>
+
+        <!-- Copyright -->
+        <p class="mb-0">&copy; 2025 Michael Reyes-Casanova. All rights reserved.</p>
+    </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
